src/test/deca/syntax/invalid/ineq__string_ineq_void.deca
// Description :
//
//      Test syntaxiquement incorrect de : "bonjour"!=
//      
// 
// Résultats : 
// 
//      N/A 
//
// Historique :
// 
//    Créé le 09/06/2023 par gl03

{ 
    boolean y = "bonjour"!=; 
}